--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,12 @@
-
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   font-family: Helvetica, sans-serif;
 
-  > div {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 30px;
+  canvas {
+  	width: 100vw;
+  	height: 100vh;
   }
 }
