--- a/src/style.scss
+++ b/src/style.scss
@@ -9,4 +9,22 @@ body {
   	width: 100vw;
   	height: 100vh;
   }
+
+  .gui-wrap {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+  }
+
+  .gui-wrap > .main {
+    pointer-events: all;
+    max-height: 100%;
+    overflow: auto;
+  }
+
+  .dg li.gui-stats:not(.folder) {
+    height: auto;
+  }
 }
