--- a/src/style.scss
+++ b/src/style.scss
@@ -1,30 +1,239 @@
+$ease-out: cubic-bezier(.165, .84, .44, 1);
+
 body {
   margin: 0;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
   font-family: Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
 
   canvas {
   	width: 100vw;
   	height: 100vh;
   }
 
-  .gui-wrap {
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: inherit;
+  }
+
+  .overflow {
+    overflow: hidden;
+  }
+
+  .loader {
+    // display: flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
+    z-index: 1000;
+    color: white;
+
+    &_text {
+      span {
+        display: block;
+        transform: translateY(100%);
+      }
+      margin-top: 70px;
+      text-align: center;
+    }
+
+    &_logo {
+      fill: #FF0000;
+      width: 900px;
+    }
+
+    &_btn {
+      position: absolute;
+      bottom: 0;
+      margin-bottom: 100px;
+      width: 220px;
+      text-transform: uppercase;
+      color: white;
+      height: 50px;
+      border-radius: 220px;
+      border: 1px solid white;
+      background: none;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .logo {
+    fill: #FF0000;
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 100px;
+    width: 200px;
+    top: 0;
+    left: 0;
+    z-index: 200;
+  }
+
+  .sound {
+    font-family: Trixie;
+    position: absolute;
     bottom: 0;
-    pointer-events: none;
+    left: 0;
+    margin-left: 100px;
+    margin-bottom: 80px;
+    color: white;
   }
 
-  .gui-wrap > .main {
-    pointer-events: all;
-    max-height: 100%;
-    overflow: auto;
+  .watch {
+    font-family: Trixie;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-right: 100px;
+    margin-bottom: 80px;
+    color: white;
   }
 
-  .dg li.gui-stats:not(.folder) {
-    height: auto;
+  .introduction {
+    opacity: 0;
+    font-family: Trixie;
+    display: flex;
+    font-size: 20px;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    color: white;
+
+    span {
+      display: block;
+    }
+  }
+
+  .menu {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 100px;
+    width: 25px;
+    transition: width 1s $ease-out;
+
+    &:before {
+      content: '';
+      display: block;
+      position: relative;
+      width: 15px;
+      height: 1px;
+      background-color: white;
+      transition: width 0.6s $ease-out;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:hover::before{
+      width: 25px;
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      position: relative;
+      margin-top: 5px;
+      width: 25px;
+      height: 1px;
+      background-color: white;
+    }
+  }
+
+  .wrapper {
+    width: 100vw;
+    height: 0;
+    background-color: black;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform-origin: bottom;
+  }
+
+  .overlay {
+    display: flex;
+    transform-origin: bottom;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: black;
+    color: white;
+    font-size: 70px;
+    font-weight: 400;
+    align-items: center;
+    padding-left: 25vw;
+
+    a {
+      display: block;
+      transform: translateY(100%);
+    }
+
+
+    .close {
+      left: 0;
+      margin-left: 100px;
+      position: absolute;
+      width: 25px;
+      height: 25px;
+
+      &:after {
+        content: '';
+        width: 25px;
+        height: 1px;
+        transform: rotate(45deg);
+        background-color: white;
+        display: block;
+        position: absolute;
+      }
+
+      &:before {
+        content: '';
+        width: 25px;
+        height: 1px;
+        transform: rotate(-45deg);
+        background-color: white;
+        display: block;
+        position: absolute;
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    ul li {
+      list-style: none;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      overflow: hidden;
+    }
   }
 }
