--- a/src/style.scss
+++ b/src/style.scss
@@ -25,6 +25,52 @@ body {
     font-weight: inherit;
   }
 
+  .cursos-wrapper {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .cursor {
+    z-index: 3000;
+    position:absolute;
+    width: 15px;
+    height: 15px;
+    border-radius:50px;
+    border: 1px solid white;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    pointer-events: none;
+  }
+
+  .active {
+    opacity: 1 !important;
+    transform: translateY(0px) !important;
+  }
+
+
+  .hover-states {
+    z-index: 400;
+    position:absolute;
+    width: 150px;
+    top:50%;
+    left:50%;
+    transform: translate(20%,20%);
+    pointer-events: none;
+    color: white;
+    font-size: 1.2rem;
+
+    .perso_1, .perso_2, .perso_3, .synopsis, .critics, .context {
+      position: absolute;
+      opacity: 0;
+      transform: translateY(10px);
+      transition: all 0.6s $ease-out;
+    }
+  }
+
   .overflow {
     overflow: hidden;
   }
@@ -41,7 +87,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 500;
     color: white;
 
     &_text {
@@ -73,6 +119,31 @@ body {
       &:hover {
         cursor: pointer;
       }
+    }
+  }
+
+  .downloader {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 700;
+    display: flex;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+
+    .line-wrapper {
+      width: 25vw;
+      height: 1px;
+    }
+
+    .line {
+      width: 0%;
+      height: 100%;
+      transform-origin: right;
+      background-color: white;
     }
   }
 
@@ -118,12 +189,30 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 200;
     justify-content: center;
     align-items: center;
     color: white;
 
+    &_background {
+      position: absolute;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      left: 0;
+      background-color: black;
+      opacity: 0.6;
+      z-index: 100;
+    }
+
+    .overflow {
+      position: relative;
+      z-index: 200;
+    }
+
     span {
       display: block;
+      transform: translateY(100%);
     }
   }
 
@@ -183,7 +272,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 450;
     background-color: black;
     color: white;
     font-size: 70px;
